EXAM/mariadb.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb-statefulset
spec:
  replicas: 1
  selector:
    matchLabels:
      hesias.io/application: database
  serviceName: "mariadb-service"
  volumeClaimTemplates:
    - metadata:
        name: mydata
      spec:
        accessModes: 
          - ReadWriteOnce
        storageClassName: standard
        resources:
          requests:
            storage: 1Gi
  template:
    metadata:
      labels:
        hesias.io/application: database
        hesias.io/datacenter: clermont-ferrand
    spec:
      containers:
        - name: mariadb-container
          image: mariadb
          volumeMounts:
          - mountPath: /var/lib/mysql
            name: mydata

---
apiVersion: v1
kind: Service
metadata: 
  name: mariadb-service
spec:
  selector:
    hesias.io/application: database
  ports: 
    - name: mariadb-http
      port: 8080
      targetPort: 8080
      protocol: TCP
